[lang] updated language files from Transifex

--- a/resource.language.cs_cz/resources/strings.po
+++ b/resource.language.cs_cz/resources/strings.po
@@ -13605,6 +13605,10 @@ msgctxt "#36140"
 msgid "Choose which temperature unit is used for displaying temperatures in the user interface."
 msgstr "Zvolte, která jednotka teploty bude použita pro zobrazení teplot v uživatelském rozhraní."
 
+msgctxt "#36141"
+msgid "Show plot information for unwatched media in the video library. The plot will be shown for the specific category you have selected. For example if 'Movies' is selected, the plot will be shown at the movie library, but will be hidden for TV shows and otherwise."
+msgstr "Zobrazovat popis děje pro neshlédnutá média v knihovně videí. Děj bude zobrazen pro konkrétní vybranou kategorii. Například pokud je vybráno „Filmy“, děj bude zobrazen pro knihovnu filmů, ale skrytý pro televizní pořady a obráceně."
+
 msgctxt "#36142"
 msgid "Choose which speed unit is used for displaying speeds in the user interface."
 msgstr "Zvolte, která jednotka rychlosti bude použita pro zobrazení rychlostí v uživatelském rozhraní."
@@ -14296,6 +14300,10 @@ msgstr "Když nastane ruční nebo automatická aktualizace knihovny, upozornit 
 msgctxt "#36325"
 msgid "Enable the UPnP client. This allows you to stream media from any UPnP server with a control point and control playback from that server."
 msgstr "Povolit klienta UPnP. Toto vám umožňuje streamovat média z jakéhokoliv serveru UPnP s řídícím bodem a ovládáním přehrávání z tohoto serveru."
+
+msgctxt "#36326"
+msgid "Enable the UPnP control point. This allows you to stream media to any UPnP client and control its playback."
+msgstr "Povolit řídící bod UPnP. Toto vám umožňuje streamovat média do jakéhokoliv klienta UPnP a ovládat jeho přehrávání."
 
 msgctxt "#36327"
 msgid "This category contains the settings for how the web server service and the application control service is handled."
