--- a/resource.language.cy_gb/resources/strings.po
+++ b/resource.language.cy_gb/resources/strings.po
@@ -4189,6 +4189,10 @@ msgctxt "#10700"
 msgid "TV channels"
 msgstr "Sianeli teledu"
 
+msgctxt "#10701"
+msgid "TV recordings"
+msgstr "Recordiadau teledu"
+
 msgctxt "#10702"
 msgid "TV guide"
 msgstr "Amserlen y Teledu"
@@ -4197,9 +4201,37 @@ msgctxt "#10705"
 msgid "Radio channels"
 msgstr "Sianeli radio"
 
+msgctxt "#10706"
+msgid "Radio recordings"
+msgstr "Recordiadau radio"
+
+msgctxt "#10707"
+msgid "Radio guide"
+msgstr "Amserlen radio"
+
+msgctxt "#10800"
+msgid "Fullscreen live TV"
+msgstr "Teledu sgrin lawn"
+
+msgctxt "#10801"
+msgid "Fullscreen radio"
+msgstr "Radio sgrin lawn"
+
 msgctxt "#10821"
 msgid "Games"
 msgstr "Gemau"
+
+msgctxt "#12001"
+msgid "Music info"
+msgstr "Gwybodaeth cerddoriaeth"
+
+msgctxt "#12002"
+msgid "OK dialog"
+msgstr "Deialog cadarnhau"
+
+msgctxt "#12003"
+msgid "Video info"
+msgstr "Gwybodaeth fideo"
 
 msgctxt "#12005"
 msgid "Fullscreen video"
@@ -4500,6 +4532,10 @@ msgstr "Arbedwr sgrin"
 msgctxt "#12901"
 msgid "Fullscreen OSD"
 msgstr "Dangosydd ar Sgrin Sgrin Lawn"
+
+msgctxt "#12906"
+msgid "Fullscreen game"
+msgstr "Gêm sgrin lawn"
 
 msgctxt "#12999"
 msgid "Startup"
@@ -5248,6 +5284,10 @@ msgstr "Cyfrifo maint folder"
 msgctxt "#13395"
 msgid "Video settings"
 msgstr "Gosodiadau fideo"
+
+msgctxt "#13396"
+msgid "Audio settings"
+msgstr "Gosodiadau sain"
 
 msgctxt "#13397"
 msgid "Enable subtitles"
@@ -6825,6 +6865,10 @@ msgctxt "#19062"
 msgid "Sort by: Channel"
 msgstr "Trefnu: Sianel"
 
+msgctxt "#19063"
+msgid "Go to beginning"
+msgstr "Mynd i'r dechrau"
+
 msgctxt "#19064"
 msgid "Go to end"
 msgstr "Mynd i'r diwedd"
@@ -7337,6 +7381,10 @@ msgctxt "#19273"
 msgid "TV guide"
 msgstr "Amserlen y Teledu"
 
+msgctxt "#19274"
+msgid "Radio guide"
+msgstr "Amserlen radio"
+
 msgctxt "#19275"
 msgid "Conflict warning"
 msgstr "Rhybudd gwrthdaro"
@@ -7385,21 +7433,85 @@ msgctxt "#19287"
 msgid "All channels"
 msgstr "Pob sianel"
 
+msgctxt "#19499"
+msgid "Other / Unknown"
+msgstr "Arall / Anhysbys"
+
+msgctxt "#19500"
+msgid "Movie / Drama"
+msgstr "Drama / Ffilm"
+
+msgctxt "#19501"
+msgid "Detective / Thriller"
+msgstr "Dirgel / Cyffro"
+
+msgctxt "#19502"
+msgid "Adventure / Western / War"
+msgstr "Antur / Rhyfel / Cowbois"
+
+msgctxt "#19503"
+msgid "Science fiction / Fantasy / Horror"
+msgstr "Ffuglen wyddonol / Ffantasi / Dychryn"
+
 msgctxt "#19504"
 msgid "Comedy"
 msgstr "Comedi"
+
+msgctxt "#19505"
+msgid "Soap / Melodrama / Folkloric"
+msgstr "Sebon / Meloddrama"
 
 msgctxt "#19506"
 msgid "Romance"
 msgstr "Serch"
 
+msgctxt "#19507"
+msgid "Serious / Classical / Religious / Historical movie / drama"
+msgstr "Dogfen / Clasurol / Crefyddol / Ffilm neu ddrama hanesyddol"
+
+msgctxt "#19508"
+msgid "Adult movie / drama"
+msgstr "Ffilm / drama i oedolion"
+
+msgctxt "#19516"
+msgid "News / Current affairs"
+msgstr "Newyddion / Materion cyfoes"
+
+msgctxt "#19517"
+msgid "News / Weather report"
+msgstr "Newyddion / Tywydd"
+
+msgctxt "#19518"
+msgid "News magazine"
+msgstr "Cylchgrawn newyddion"
+
 msgctxt "#19519"
 msgid "Documentary"
 msgstr "Dogfen"
 
+msgctxt "#19520"
+msgid "Discussion / Interview / Debate"
+msgstr "Sgwrsio / Cyfweliad / Dadlau"
+
+msgctxt "#19533"
+msgid "Game show / Quiz / Contest"
+msgstr "Gêm / Cwis / Cystadleuaeth"
+
+msgctxt "#19534"
+msgid "Variety show"
+msgstr "Sioe amrywiaeth"
+
 msgctxt "#19548"
 msgid "Sports"
 msgstr "Chwaraeon"
+
+msgctxt "#19549"
+msgid "Special event"
+msgstr "Digwyddiad arbennig"
+
+msgctxt "#19550"
+msgid "Sport magazine"
+msgstr "Cylchgrawn chwaraeon"
 
 msgctxt "#19551"
 msgid "Football"
@@ -7461,9 +7573,25 @@ msgctxt "#19676"
 msgid "Drama"
 msgstr "Drama"
 
+msgctxt "#19677"
+msgid "Detective / Thriller"
+msgstr "Dirgel / Cyffro"
+
+msgctxt "#19678"
+msgid "Adventure / Western / War"
+msgstr "Antur / Rhyfel / Cowbois"
+
+msgctxt "#19679"
+msgid "Science fiction / Fantasy / Horror"
+msgstr "Ffuglen wyddonol / Ffantasi / Dychryn"
+
 msgctxt "#19680"
 msgid "Comedy"
 msgstr "Comedi"
+
+msgctxt "#19681"
+msgid "Soap / Melodrama / Folkloric"
+msgstr "Sebon / Meloddrama"
 
 msgctxt "#19682"
 msgid "Romance"
