--- a/resource.language.es_es/resources/strings.po
+++ b/resource.language.es_es/resources/strings.po
@@ -7793,6 +7793,10 @@ msgctxt "#19194"
 msgid "Continue?"
 msgstr "¿Continuar?"
 
+msgctxt "#19195"
+msgid "Delay mark last watched"
+msgstr "Retardo de marca de último visto"
+
 msgctxt "#19196"
 msgid "PVR client specific actions"
 msgstr "Acciones específicas del cliente PVR"
@@ -13605,6 +13609,10 @@ msgctxt "#36140"
 msgid "Choose which temperature unit is used for displaying temperatures in the user interface."
 msgstr "Qué unidad de temperatura se usará para mostrar temperaturas en el interfaz de usuario."
 
+msgctxt "#36141"
+msgid "Show plot information for unwatched media in the video library. The plot will be shown for the specific category you have selected. For example if 'Movies' is selected, the plot will be shown at the movie library, but will be hidden for TV shows and otherwise."
+msgstr "Muestra el argumento del contenido no visto de la colección de video. Se mostrará el argumento de la categoría específica que haya elegido. Por ejemplo, si se elige 'Películas', los argumentos se mostrarán en la colección de películas, pero se ocultarán en las series de TV y al contrario."
+
 msgctxt "#36142"
 msgid "Choose which speed unit is used for displaying speeds in the user interface."
 msgstr "Qué unidad de velocidad se usará para mostrar velocidades en el interfaz de usuario."
@@ -13977,6 +13985,10 @@ msgctxt "#36234"
 msgid "Duration of instant recordings when pressing the record button. This value will be taken into account if \"Instant recording action\" is set to \"Record for a fixed period of time\""
 msgstr "Duración de la grabación inmediata cuando presiona el botón Grabar. Este valor se utilizará si la \"acción de grabación inmediata\" está configurada como \"Grabar un periodo fijo de tiempo\""
 
+msgctxt "#36236"
+msgid "If set to a value greater than zero last watched time of channels will be stored the given amount of time after start of channel playback. Otherwise the last watched time will be stored immediately at start of channel playback."
+msgstr "Si establece un valor mayor que cero, el tiempo de último visto de cada canal se guardará con el valor añadido despues de empezar a ver el canal. Si no, el tiempo de último visto que se guardará será el tiempo exacto en que empezó a ver el canal."
+
 msgctxt "#36237"
 msgid "Additional time to record before the scheduled start time to allow for minor broadcasting changes. Not supported by all add-ons and backends."
 msgstr "Tiempo adicional grabado antes del tiempo especificado para permitir pequeños cambios en la emisión. No soportado por todos los add-ons y servidores."
@@ -14296,6 +14308,10 @@ msgstr "Cuando se actualice la colección, notificará a los clientes UPnP."
 msgctxt "#36325"
 msgid "Enable the UPnP client. This allows you to stream media from any UPnP server with a control point and control playback from that server."
 msgstr "Activa el cliente UPnP. Esto le permite transmitir contenido desde cualquier servidor UPnP con un punto de control y controlar la reproducción desde ese servidor."
+
+msgctxt "#36326"
+msgid "Enable the UPnP control point. This allows you to stream media to any UPnP client and control its playback."
+msgstr "Activa el punto de control UPnP. Esto permite emitir contenido a cualquier cliente UPnP y controlar su reproducción."
 
 msgctxt "#36327"
 msgid "This category contains the settings for how the web server service and the application control service is handled."
