--- a/resource.language.fi_fi/resources/strings.po
+++ b/resource.language.fi_fi/resources/strings.po
@@ -7789,6 +7789,10 @@ msgctxt "#19194"
 msgid "Continue?"
 msgstr "Jatketaanko?"
 
+msgctxt "#19195"
+msgid "Delay mark last watched"
+msgstr "Viive katseluhistoriaan lisäämiselle"
+
 msgctxt "#19196"
 msgid "PVR client specific actions"
 msgstr "PVR-asiakaskohtaiset toiminnot"
@@ -13601,6 +13605,10 @@ msgctxt "#36140"
 msgid "Choose which temperature unit is used for displaying temperatures in the user interface."
 msgstr "Valitse sovelluksessa käytettävä lämpötilayksikkö."
 
+msgctxt "#36141"
+msgid "Show plot information for unwatched media in the video library. The plot will be shown for the specific category you have selected. For example if 'Movies' is selected, the plot will be shown at the movie library, but will be hidden for TV shows and otherwise."
+msgstr "Määrittää näytetäänkö katsomattomien videoiden juonitiedot. Asetuksesta on hyötyä, jos haluat välttyä juonipaljastuksilta uusien jaksojen tai elokuvien kohdalla."
+
 msgctxt "#36142"
 msgid "Choose which speed unit is used for displaying speeds in the user interface."
 msgstr "Valitse sovelluksessa käytettävä nopeusyksikkö."
@@ -13973,6 +13981,10 @@ msgctxt "#36234"
 msgid "Duration of instant recordings when pressing the record button. This value will be taken into account if \"Instant recording action\" is set to \"Record for a fixed period of time\""
 msgstr "Tallennuspainikkeesta asetettujen pikatallennusten kesto. Tätä arvoa käytetään, jos \"Pikatallennuksen toiminto\"-asetuksena käytetään \"Tallenna tietty aika\"."
 
+msgctxt "#36236"
+msgid "If set to a value greater than zero last watched time of channels will be stored the given amount of time after start of channel playback. Otherwise the last watched time will be stored immediately at start of channel playback."
+msgstr "Määrittää kuinka monta sekuntia kanavaa pitää katsoa ennen kuin se näkyy viimeksi katsottujen kanavien listassa."
+
 msgctxt "#36237"
 msgid "Additional time to record before the scheduled start time to allow for minor broadcasting changes. Not supported by all add-ons and backends."
 msgstr "Aloittaa ohjelman tallentamisen etuajassa valitun minuuttimäärän verran. Toiminnosta on hyötyä, jos ohjelma alkaa ilmoitettua aiemmin. Kaikki lisäosat eivät tue tätä toimintoa."
@@ -14292,6 +14304,10 @@ msgstr "Ilmoita manuaalisista tai automaattisista kirjaston päivityksistä UPnP
 msgctxt "#36325"
 msgid "Enable the UPnP client. This allows you to stream media from any UPnP server with a control point and control playback from that server."
 msgstr "Kytkee UPnP-asiakkaan päälle. UPnP-asiakkaalle voi lähettää mediatiedostoja verkkoon kytketyiltä UPnP-palvelimilta ja hallita mediatoistoa UPnP-ohjauspisteen kautta."
+
+msgctxt "#36326"
+msgid "Enable the UPnP control point. This allows you to stream media to any UPnP client and control its playback."
+msgstr "Kytkee UPnP-ohjauspisteen päälle. Sen avulla voidaan lähettää mediaa UPnP-asiakkaille ja hallita niiden toistoa."
 
 msgctxt "#36327"
 msgid "This category contains the settings for how the web server service and the application control service is handled."
