--- a/resource.language.fr_fr/resources/strings.po
+++ b/resource.language.fr_fr/resources/strings.po
@@ -7295,7 +7295,7 @@ msgstr "Guide TV"
 
 msgctxt "#19070"
 msgid "Go to now"
-msgstr "Y aller maintenant"
+msgstr "En ce moment"
 
 msgctxt "#19071"
 msgid "Update interval"
@@ -7792,6 +7792,10 @@ msgstr "La recherche des chaînes ne peut pas être lancée. Consulter le journa
 msgctxt "#19194"
 msgid "Continue?"
 msgstr "Faut-il vraiment continuer ?"
+
+msgctxt "#19195"
+msgid "Delay mark last watched"
+msgstr "Délai date dernière vue"
 
 msgctxt "#19196"
 msgid "PVR client specific actions"
@@ -13605,6 +13609,10 @@ msgctxt "#36140"
 msgid "Choose which temperature unit is used for displaying temperatures in the user interface."
 msgstr "Sélection de l'unité de mesure pour l'affichage des températures sur l'interface utilisateur."
 
+msgctxt "#36141"
+msgid "Show plot information for unwatched media in the video library. The plot will be shown for the specific category you have selected. For example if 'Movies' is selected, the plot will be shown at the movie library, but will be hidden for TV shows and otherwise."
+msgstr "Affiche l'intrigue des médias non vus de la vidéothèque. L'intrigue sera affichée pour la catégorie spécifiée. Par ex. si « Films » est sélectionné, l'intrigue de la bibliothèque de films sera affichée mais pas celle des séries TV ou autres."
+
 msgctxt "#36142"
 msgid "Choose which speed unit is used for displaying speeds in the user interface."
 msgstr "Sélection de l'unité de mesure pour l'affichage des vitesses sur l'interface utilisateur."
@@ -13977,6 +13985,10 @@ msgctxt "#36234"
 msgid "Duration of instant recordings when pressing the record button. This value will be taken into account if \"Instant recording action\" is set to \"Record for a fixed period of time\""
 msgstr "Durée de l'enregistrement immédiat quand le bouton d'enregistrement est pressé. Cette valeur sera prise en compte si l'action « Enregistrement immédiat » est définie à « Enregistrer pendant une période de temps fixe »."
 
+msgctxt "#36236"
+msgid "If set to a value greater than zero last watched time of channels will be stored the given amount of time after start of channel playback. Otherwise the last watched time will be stored immediately at start of channel playback."
+msgstr "Si supérieure à 0, la dernière date où la chaîne a été vue sera conservée pendant la valeur définie après le début d'affichage. Sinon la dernière date où la chaîne a été vue sera stockée dès son affichage."
+
 msgctxt "#36237"
 msgid "Additional time to record before the scheduled start time to allow for minor broadcasting changes. Not supported by all add-ons and backends."
 msgstr "Temps d'enregistrement supplémentaire avant l'heure de début planifiée pour tolérer des changements mineurs de diffusion. Toutes les extensions et tous les serveurs ne sont pas reconnus."
@@ -14296,6 +14308,10 @@ msgstr "Notifie les clients UPnP lorsqu'une mise à jour manuelle ou automatique
 msgctxt "#36325"
 msgid "Enable the UPnP client. This allows you to stream media from any UPnP server with a control point and control playback from that server."
 msgstr "Active le client UPnP. Cela permet de contrôler la diffusion de médias à partir de n'importe quel serveur UPnP avec un point de contrôle, et de contrôler la lecture à partir de ce serveur."
+
+msgctxt "#36326"
+msgid "Enable the UPnP control point. This allows you to stream media to any UPnP client and control its playback."
+msgstr "Active le point de contrôle UPnP. Cela permet la diffusion de médias vers tout client UPnP et le contrôle de sa lecture."
 
 msgctxt "#36327"
 msgid "This category contains the settings for how the web server service and the application control service is handled."
