--- a/resource.language.lt_lt/resources/strings.po
+++ b/resource.language.lt_lt/resources/strings.po
@@ -7793,6 +7793,10 @@ msgctxt "#19194"
 msgid "Continue?"
 msgstr "Tęsti?"
 
+msgctxt "#19195"
+msgid "Delay mark last watched"
+msgstr "Atidėti paskutinio žiūrėto pažymėjimą"
+
 msgctxt "#19196"
 msgid "PVR client specific actions"
 msgstr "PVR kliento specifiniai veiksmai"
@@ -13604,6 +13608,10 @@ msgstr "Šioje kategorijoje yra nustatymai, skirti video bibliotekos tvarkymui."
 msgctxt "#36140"
 msgid "Choose which temperature unit is used for displaying temperatures in the user interface."
 msgstr "Pasirinkite, kurį temperatūros matavimo vienetą naudoti temperatūros atvaizdavimui vartotojo sąsajoje."
+
+msgctxt "#36141"
+msgid "Show plot information for unwatched media in the video library. The plot will be shown for the specific category you have selected. For example if 'Movies' is selected, the plot will be shown at the movie library, but will be hidden for TV shows and otherwise."
+msgstr "Rodyti siužeto informaciją neperžiūrėtiems media įrašams vaizdo įrašų bibliotekoje. Siužetas bus rodomas konkrečioms pasirinktoms kategorijoms. Pavyzdžiui, jei pasirinksite 'Filmus', siužetas bus rodomas filmų bibliotekoje, tačiau bus paslėptas TV laidoms ir atvirkščiai."
 
 msgctxt "#36142"
 msgid "Choose which speed unit is used for displaying speeds in the user interface."
