--- a/resource.language.sv_se/resources/strings.po
+++ b/resource.language.sv_se/resources/strings.po
@@ -5695,7 +5695,7 @@ msgstr "Lägg till bildtyp"
 
 msgctxt "#13517"
 msgid "Threshold for pitch correction"
-msgstr "Gränsvärde för pitch-korrigering"
+msgstr "Gränsvärde för pitchkorrigering"
 
 msgctxt "#13518"
 msgid "When the speed change exceeds this threshold, a pitch-correction filter will be applied. This avoids the \"chipmonk voices\" that normally result from speeding up a video"
@@ -14327,7 +14327,7 @@ msgstr "Denna kategorin innehåller inställningar för hur fjärrkontrolltjäns
 
 msgctxt "#36334"
 msgid "Allow programs on this computer to control this application via the web interface or the JSON-RPC interface protocol."
-msgstr "Tillåt program på den här datorn att styra det här programmet via webbgränssnittet eller via JSON-RPC-gränssnittsprotokollet."
+msgstr "Tillåt program på den här datorn att styra det här applikationen via webbgränssnittet eller via JSON-RPC-gränssnittsprotokollet."
 
 msgctxt "#36335"
 msgid "Define the remote control port."
