--- a/resource.language.pt_br/resources/strings.po
+++ b/resource.language.pt_br/resources/strings.po
@@ -7793,6 +7793,10 @@ msgctxt "#19194"
 msgid "Continue?"
 msgstr "Continue?"
 
+msgctxt "#19195"
+msgid "Delay mark last watched"
+msgstr "Atrasar marcar último assistido"
+
 msgctxt "#19196"
 msgid "PVR client specific actions"
 msgstr "Ações Específicas do Cliente PVR"
@@ -13605,6 +13609,10 @@ msgctxt "#36140"
 msgid "Choose which temperature unit is used for displaying temperatures in the user interface."
 msgstr "Escolha qual a unidade de temperatura será usada para apresentar temperaturas na interface do usuário."
 
+msgctxt "#36141"
+msgid "Show plot information for unwatched media in the video library. The plot will be shown for the specific category you have selected. For example if 'Movies' is selected, the plot will be shown at the movie library, but will be hidden for TV shows and otherwise."
+msgstr "Mostrar informações de enredo para mídia não assistida na biblioteca de vídeos. O enredo será mostrado para a categoria específica que você selecionou. Por exemplo, se 'Filmes' for selecionado, o enredo será exibido na biblioteca de filmes, mas ficará oculto para seriados e outros."
+
 msgctxt "#36142"
 msgid "Choose which speed unit is used for displaying speeds in the user interface."
 msgstr "Escolha qual a unidade de velocidade será usada para apresentar velocidades na interface do usuário."
@@ -13977,6 +13985,10 @@ msgctxt "#36234"
 msgid "Duration of instant recordings when pressing the record button. This value will be taken into account if \"Instant recording action\" is set to \"Record for a fixed period of time\""
 msgstr "Duração da gravação imediata quando pressionar o botão de gravar. Este valor irá levar em conta o que estiver configurado se \"ação de gravação imediata\" estiver setado para \"Gravar por um período fixo de tempo\""
 
+msgctxt "#36236"
+msgid "If set to a value greater than zero last watched time of channels will be stored the given amount of time after start of channel playback. Otherwise the last watched time will be stored immediately at start of channel playback."
+msgstr "Se definido um valor maior que zero, o último tempo assistido dos canais será armazenado durante o início da reprodução do canal. Caso contrário, o último tempo assistido será armazenado imediatamente no início da reprodução do canal."
+
 msgctxt "#36237"
 msgid "Additional time to record before the scheduled start time to allow for minor broadcasting changes. Not supported by all add-ons and backends."
 msgstr "Tempo adicional para gravar antes da hora de início agendada para permitir mudanças de radiodifusão menores. Não é suportado por todos os add-ons e backends."
@@ -14296,6 +14308,10 @@ msgstr "Quando ocorrer uma atualização da biblioteca manual ou automática, no
 msgctxt "#36325"
 msgid "Enable the UPnP client. This allows you to stream media from any UPnP server with a control point and control playback from that server."
 msgstr "Ativar o cliente UPnP. Isto permitir-lhe-à transmitir mídia de qualquer servidor UPnP com um ponto de controle e controlar a reprodução a partir desse servidor."
+
+msgctxt "#36326"
+msgid "Enable the UPnP control point. This allows you to stream media to any UPnP client and control its playback."
+msgstr "Ativar o ponto de controle UPnP. Isso permite transmitir mídia para qualquer cliente UPnP e controlar sua reprodução."
 
 msgctxt "#36327"
 msgid "This category contains the settings for how the web server service and the application control service is handled."
