--- a/resource.images.studios.coloured/changelog.txt
+++ b/resource.images.studios.coloured/changelog.txt
@@ -1,3 +1,6 @@
+v0.0.13
+- remove icons with (case-insensitive) duplicate filenames
+
 v0.0.12
 - remove icons with (case-insensitive) duplicate filenames
 
