--- a/resource.language.en_us/resources/strings.po
+++ b/resource.language.en_us/resources/strings.po
@@ -15,27 +15,27 @@ msgstr ""
 
 msgctxt "#0"
 msgid "Programs"
-msgstr "البرامج"
+msgstr "Programs"
 
 msgctxt "#1"
 msgid "Pictures"
-msgstr "الصور"
+msgstr "Pictures"
 
 msgctxt "#2"
 msgid "Music"
-msgstr "الصوتيات"
+msgstr "Music"
 
 msgctxt "#3"
 msgid "Videos"
-msgstr "الفيديوهات"
+msgstr "Videos"
 
 msgctxt "#4"
 msgid "TV guide"
-msgstr "دليل التلفاز"
+msgstr "TV guide"
 
 msgctxt "#5"
 msgid "Settings"
-msgstr "الإعدادات"
+msgstr "Settings"
 
 msgctxt "#6"
 msgid "Kodi GIT"
@@ -43,167 +43,167 @@ msgstr "Kodi GIT"
 
 msgctxt "#7"
 msgid "File manager"
-msgstr "مدير الملفات"
+msgstr "File manager"
 
 msgctxt "#8"
 msgid "Weather"
-msgstr "الطقس"
+msgstr "Weather"
 
 msgctxt "#9"
 msgid "Kodi media center"
-msgstr "مركز وسائط كودي"
+msgstr "Kodi media center"
 
 msgctxt "#11"
 msgid "Monday"
-msgstr "الإثنين"
+msgstr "Monday"
 
 msgctxt "#12"
 msgid "Tuesday"
-msgstr "الثلاثاء"
+msgstr "Tuesday"
 
 msgctxt "#13"
 msgid "Wednesday"
-msgstr "الأربعاء"
+msgstr "Wednesday"
 
 msgctxt "#14"
 msgid "Thursday"
-msgstr "الخميس"
+msgstr "Thursday"
 
 msgctxt "#15"
 msgid "Friday"
-msgstr "الجمعة"
+msgstr "Friday"
 
 msgctxt "#16"
 msgid "Saturday"
-msgstr "السبت"
+msgstr "Saturday"
 
 msgctxt "#17"
 msgid "Sunday"
-msgstr "الأحد"
+msgstr "Sunday"
 
 msgctxt "#21"
 msgid "January"
-msgstr "يناير"
+msgstr "January"
 
 msgctxt "#22"
 msgid "February"
-msgstr "فبراير"
+msgstr "February"
 
 msgctxt "#23"
 msgid "March"
-msgstr "مارس"
+msgstr "March"
 
 msgctxt "#24"
 msgid "April"
-msgstr "أبريل"
+msgstr "April"
 
 msgctxt "#25"
 msgid "May"
-msgstr "مايو"
+msgstr "May"
 
 msgctxt "#26"
 msgid "June"
-msgstr "يونيو"
+msgstr "June"
 
 msgctxt "#27"
 msgid "July"
-msgstr "يوليو"
+msgstr "July"
 
 msgctxt "#28"
 msgid "August"
-msgstr "أغسطس"
+msgstr "August"
 
 msgctxt "#29"
 msgid "September"
-msgstr "سبتمبر"
+msgstr "September"
 
 msgctxt "#30"
 msgid "October"
-msgstr "أكتوبر"
+msgstr "October"
 
 msgctxt "#31"
 msgid "November"
-msgstr "نوفمبر"
+msgstr "November"
 
 msgctxt "#32"
 msgid "December"
-msgstr "ديسمبر"
+msgstr "December"
 
 msgctxt "#41"
 msgid "Mon"
-msgstr "إثنين"
+msgstr "Mon"
 
 msgctxt "#42"
 msgid "Tue"
-msgstr "ثلاثاء"
+msgstr "Tue"
 
 msgctxt "#43"
 msgid "Wed"
-msgstr "أربعاء"
+msgstr "Wed"
 
 msgctxt "#44"
 msgid "Thu"
-msgstr "خميس"
+msgstr "Thu"
 
 msgctxt "#45"
 msgid "Fri"
-msgstr "جمعة"
+msgstr "Fri"
 
 msgctxt "#46"
 msgid "Sat"
-msgstr "سبت"
+msgstr "Sat"
 
 msgctxt "#47"
 msgid "Sun"
-msgstr "أحد"
+msgstr "Sun"
 
 msgctxt "#51"
 msgid "Jan"
-msgstr "يناير"
+msgstr "Jan"
 
 msgctxt "#52"
 msgid "Feb"
-msgstr "فبراير"
+msgstr "Feb"
 
 msgctxt "#53"
 msgid "Mar"
-msgstr "مارس"
+msgstr "Mar"
 
 msgctxt "#54"
 msgid "Apr"
-msgstr "أبريل"
+msgstr "Apr"
 
 msgctxt "#55"
 msgid "May"
-msgstr "مايو"
+msgstr "May"
 
 msgctxt "#56"
 msgid "Jun"
-msgstr "يونيو"
+msgstr "Jun"
 
 msgctxt "#57"
 msgid "Jul"
-msgstr "يوليو"
+msgstr "Jul"
 
 msgctxt "#58"
 msgid "Aug"
-msgstr "أغسطس"
+msgstr "Aug"
 
 msgctxt "#59"
 msgid "Sep"
-msgstr "سبتمبر"
+msgstr "Sep"
 
 msgctxt "#60"
 msgid "Oct"
-msgstr "أكتوبر"
+msgstr "Oct"
 
 msgctxt "#61"
 msgid "Nov"
-msgstr "نوفمبر"
+msgstr "Nov"
 
 msgctxt "#62"
 msgid "Dec"
-msgstr "ديسمبر"
+msgstr "Dec"
 
 msgctxt "#71"
 msgid "N"
@@ -5358,8 +5358,8 @@ msgid "Preset"
 msgstr "Preset"
 
 msgctxt "#13389"
-msgid "There are no presets available for this visualisation"
-msgstr "There are no presets available for this visualization"
+msgid "There are no presets available\nfor this visualisation"
+msgstr "There are no presets available\nfor this visualization"
 
 msgctxt "#13390"
 msgid "There are no settings available\nfor this visualisation"
@@ -8229,10 +8229,6 @@ msgctxt "#19302"
 msgid "Do you want to record the selected programme or to switch to the current programme?"
 msgstr "Do you want to record the selected program or to switch to the current program?"
 
-msgctxt "#19303"
-msgid "Close channel OSD after switching channels"
-msgstr "Close channel OSD after switching channels"
-
 msgctxt "#19304"
 msgid "View timer rule"
 msgstr "View timer rule"
@@ -9704,10 +9700,6 @@ msgstr "Hide watched"
 msgctxt "#20368"
 msgid "Prod code"
 msgstr "Prod code"
-
-msgctxt "#20369"
-msgid "Show information for unwatched items"
-msgstr "Show information for unwatched items"
 
 msgctxt "#20370"
 msgid "* Hidden to prevent spoilers *"
@@ -11344,10 +11336,6 @@ msgstr "Downloading {0:d}%"
 msgctxt "#24043"
 msgid "Available updates"
 msgstr "Available updates"
-
-msgctxt "#24044"
-msgid "Installing {0:d}%"
-msgstr "Installing {0:d}%"
 
 msgctxt "#24045"
 msgid "Failed to install Add-on from zip file"
@@ -13453,10 +13441,6 @@ msgctxt "#36049"
 msgid "Remote button press release time (ms)"
 msgstr "Remote button press release time (ms)"
 
-msgctxt "#36050"
-msgid "On start"
-msgstr "On start"
-
 msgctxt "#36099"
 msgid "Dithering"
 msgstr "Dithering"
@@ -13624,10 +13608,6 @@ msgstr "This category contains the settings for how the video library is handled
 msgctxt "#36140"
 msgid "Choose which temperature unit is used for displaying temperatures in the user interface."
 msgstr "Choose which temperature unit is used for displaying temperatures in the user interface."
-
-msgctxt "#36141"
-msgid "Show information for unwatched media in the video library or hide them if not selected to prevent spoilers. Available options are 'Movie plot', 'Episode plot' and 'Episode thumb'."
-msgstr "Show information for unwatched media in the video library or hide them if not selected to prevent spoilers. Available options are 'Movie plot', 'Episode plot' and 'Episode thumb'."
 
 msgctxt "#36142"
 msgid "Choose which speed unit is used for displaying speeds in the user interface."
@@ -14000,10 +13980,6 @@ msgstr "This category contains the default recording duration settings."
 msgctxt "#36234"
 msgid "Duration of instant recordings when pressing the record button. This value will be taken into account if \"Instant recording action\" is set to \"Record for a fixed period of time\""
 msgstr "Duration of instant recordings when pressing the record button. This value will be taken into account if \"Instant recording action\" is set to \"Record for a fixed period of time\""
-
-msgctxt "#36235"
-msgid "Close the on screen display controls after switching channels."
-msgstr "Close the on screen display controls after switching channels."
 
 msgctxt "#36236"
 msgid "If set to a value greater than zero last watched time of channels will be stored the given amount of time after start of channel playback. Otherwise the last watched time will be stored immediately at start of channel playback."
@@ -15469,10 +15445,6 @@ msgctxt "#37045"
 msgid "Extract chapter thumbnails for presentation in the chapters / bookmarks dialogue. This might increase CPU load."
 msgstr "Extract chapter thumbnails for presentation in the chapters / bookmarks dialog. This might increase CPU load."
 
-msgctxt "#37046"
-msgid "1080"
-msgstr "1080"
-
 msgctxt "#38010"
 msgid "GPU accelerated"
 msgstr "GPU accelerated"
@@ -15766,14 +15738,10 @@ msgid "Include items that have not been scraped (to create template NFO files)"
 msgstr "Include items that have not been scraped (to create template NFO files)"
 
 msgctxt "#38309"
-msgid "Output information to NFO files"
-msgstr "Output information to NFO files"
+msgid "Output only artwork, not NFO files"
+msgstr "Output only artwork, not NFO files"
 
 msgctxt "#38310"
-msgid "Output information to NFO files (currently exporting artist folders only)"
-msgstr "Output information to NFO files (currently exporting artist folders only)"
-
-msgctxt "#38311"
 msgid "Overwrite existing files"
 msgstr "Overwrite existing files"
 
@@ -15800,26 +15768,6 @@ msgstr "Export"
 msgctxt "#38320"
 msgid "Do you have local artist information (NFO) and art files that you want to fetch? Set the location of these artist folders now"
 msgstr "Do you have local artist information (NFO) and art files that you want to fetch? Set the location of these artist folders now"
-
-msgctxt "#38321"
-msgid "Artist folders only"
-msgstr "Artist folders only"
-
-msgctxt "#38322"
-msgid "Artists exported to Artist Information Folder and albums to music folders"
-msgstr "Artists exported to Artist Information Folder and albums to music folders"
-
-msgctxt "#38323"
-msgid "Albums exported to music folders"
-msgstr "Albums exported to music folders"
-
-msgctxt "#38324"
-msgid "Artists exported to Artist Information Folder"
-msgstr "Artists exported to Artist Information Folder"
-
-msgctxt "#38325"
-msgid "Artist subfolders created in Artist Information Folder"
-msgstr "Artist subfolders created in Artist Information Folder"
 
 msgctxt "#38330"
 msgid "Set Music Information Providers"
@@ -15860,26 +15808,6 @@ msgstr "Choose how to apply settings"
 msgctxt "#38339"
 msgid "How to apply information provider settings"
 msgstr "How to apply information provider settings"
-
-msgctxt "#38350"
-msgid "Importing song playback history"
-msgstr "Importing song playback history"
-
-msgctxt "#38351"
-msgid "Matching data"
-msgstr "Matching data"
-
-msgctxt "#38352"
-msgid "Updating songs"
-msgstr "Updating songs"
-
-msgctxt "#38353"
-msgid "Importing song history - {0:d} updated out of {0:d} imported songs"
-msgstr "Importing song history - {0:d} updated out of {0:d} imported songs"
-
-msgctxt "#38354"
-msgid "Unable to read xml file"
-msgstr "Unable to read xml file"
 
 msgctxt "#39000"
 msgid "HD and up"
@@ -16056,10 +15984,6 @@ msgstr "Downmix: Center Mix Level"
 msgctxt "#39113"
 msgid "Center Mix Level in dB relative to metadata or default (-3 dB)"
 msgstr "Center Mix Level in dB relative to metadata or default (-3 dB)"
-
-msgctxt "#39114"
-msgid "Episode thumb"
-msgstr "Episode thumb"
 
 msgctxt "#39115"
 msgid "Movie plot"
