[resource.images.classificationicons.colour] 0.0.3

--- a/resource.images.classificationicons.colour/changelog.txt
+++ b/resource.images.classificationicons.colour/changelog.txt
@@ -1,3 +1,10 @@
+v0.0.3
+- Add alternate naming of Spanish files to allow for Embuary skin helper script returning (12Horas) or (24Horas) at end of country name.
+- Update Readme.md file to show current supported countrys
+
+v0.0.2
+- Add additional country icons
+- Change naming of some files to make it easier for scappers to support naming scheme.
 
 v0.0.1
 - Initial release
